[package]
name = "bft"
version = "0.1.0"
authors = ["Thomas Preston <thomasmarkpreston@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"bft_types",
	"bft_interp",
]

[dependencies]
bft_types = { path = "bft_types" }
bft_interp = { path = "bft_interp" }
structopt = "0.3"
